--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">DynaBlaster</string>
+    <string name="menu_startGame">Start New Game</string>
+    <string name="menu_quit">Quit</string>
+    <string name="menu_options">Options</string>
 </resources>
