--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
     <string name="app_name">DynaBlaster</string>
-    <string name="menu_startGame">Start New Game</string>
     <string name="menu_quit">Quit</string>
     <string name="menu_options">Options</string>
     <string name="menu_back">Back</string>
@@ -9,5 +8,6 @@
     <string name="prefs_name">com.kopecrad.dynablaster.gameprefs</string>
     <string name="menu_sound">Enable sound</string>
     <string name="menu_scoreboard">Scoreboard</string>
-    <string name="menu_startGameContinue">Continue</string>
+    <string name="menu_gameNew">Start new game</string>
+    <string name="menu_gameContinue">Continue</string>
 </resources>
